# svm_path_planner

./: .gitignore  CMakeLists.txt  README.md  bgp_plugin.xml  package.xml  readme.txt
ACO/: .cdtbuild  .project  Iter.cpp  aco.cpp  aco.h
Autoguiado/: .classpath  .project  javadoc.xml
Autoguiado/Jama/: Matrix.java
Autoguiado/Rutas/: nov19.gps
CPDTracking/gold/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CPackConfig.cmake  cpd.kdev4  libHelloMatlab.prj
CPDTracking/gold/src/: Application.h  CMakeLists.txt  DisparityDefs.h  DisparityOpenCV.h  DisparityWrappers.hxx  LabelledPoint3.h  Rectification.cpp  Rectification.h  StereoRectificationTools.cpp  StereoRectificationTools.h  ccpdtracking.cpp  ccpdtracking.h  cpdApp.cpp  cpdApp.h  fileList.h  mainCPD.cpp
Charla/: Fichero1.txt  f4.txt  f5.txt
ComparaImagenes/: Hormigas.cpp  aco.h  comparaImagenes.cpp  comparaImagenes.h  matchImagenes8.cpp  stdafx.cpp  stdafx.h
Conos/Conos/: Equivalence.cpp  Equivalence.h  Label.cpp  Label.h  Regions.cpp  Regions.h  main.cpp
Disparidad V/Matlab/: Captura.asv  Captura.m  DisparityMap.asv  DisparityMap.m  DisparityMapBroggi.asv  DisparityMapBroggi.m  DisparityMapFFT.m  DisparityMapNCC.asv  DisparityMapNCC.m  DisparityMapSAD.asv  DisparityMapSAD.m  Hough.asv  HoughDetect.asv  HoughDetect.m  Obstacles.asv  Obstacles.m  Thumbs.db  filtMax.asv  filtMax.m  filtSelective.asv  filtSelective.m  ncc.asv  ncc.m
Disparidad V/OpenCV/: .cproject  .project  Disparidad.cpp  Lineas.cpp  Lineas.h  Obstaculos.cpp  Obstaculos.h  PruebaOcv.vcproj  Ssc.cpp  Ssc.h  pruebaR.tif
Iter/ACO/: Iter.sln
Jade/: .classpath  .project  Barrido.mat  indexBooleana.m  indexada.m  javadoc.xml  primera.m
Jade/Datos/: CargaUltimo.m  EstudiaFrenoPID.m  EstudiaPID.m
Jade/Rutas/: ITER2  Iter1  Parq0522  Parquin2q  aITER0528_A1  aITER0528_A3
Jade/Sitios/: CasasIter.gpx
Jade/boids/: Bandada.java  Boid.java  DesignPoint.java  Obstaculo.java  Simulacion.java  Simulador.java  Simulador2.java  Simulador3.java  TipoCamino.java
Jade/gridBasedSearch/: Grid.java  GridSearchPoint.java
Jade/lib/: Makefile  makefile  shmCInterface.c  shmCInterface.h  sibtra_lms_ManejaTelegramasJNI.c  sibtra_lms_ManejaTelegramasJNI.h  sibtra_shm_shmInterface.c  sibtra_shm_shmInterface.h
Jade/repgrafica/: ConfigParam.java  ConfiguraParam.java  MuestraBoids.java  MuestraBoids2.java  PanelMapa.java  PanelMuestraBoids.java  Parametro.java
MultiSVMPathPlanning/MultiSVMPathPlanning/: CMakeLists.txt  MultiSVMPathPlanning.kdev4  ejemplo.txt  ejemploScaled.txt  out1.txt  out1commas.txt  segmented0.txt  simpleExample.txt
MultiSVMPathPlanning/MultiSVMPathPlanning/.kdev4/: MultiSVMPathPlanning (Copia en conflicto de Acerin 2013-03-22).kdev4  MultiSVMPathPlanning.kdev4
MultiSVMPathPlanning/MultiSVMPathPlanning/src/: CMakeLists.txt  testSVMPathPlanning.cpp
MultiSVMPathPlanning/MultiSVMPathPlanning/src/GPULibSVM/: CMakeLists.txt  cuSVMPredictKernel.cu  predictSVM.cu  svm-train.c  svm.cpp  svmpathplanning.cpp  svmpathplanning.h  svmpathplanningmiura.cpp  svmpathplanningmiura.h  voronoipathplanning.cpp  voronoipathplanning.h  voronoisvmpathplanning.h
MultiSVMPathPlanning/MultiSVMPathPlanning/src/cuSVM/: CMakeLists.txt  cuSVM.h  cuSVMPredictKernel.cu  cuSVMSolver.cu  cuSVMutil.h
MultiSVMPathPlanning/MultiSVMPathPlanning/src/gpudt/: subdir.mk
MultiSVMPathPlanning/MultiSVMPathPlanning/src/gpudt/Cuda/: common.h  cudaBoundary.cu  cudaConstraint.cu  cudaDecl.h  cudaFlipping.cu  cudaMain.cu  cudaMissing.cu  cudaVoronoi.cu  kernelVoronoi.h  subdir.mk
MultiSVMPathPlanning/MultiSVMPathPlanning/src/libsvm/: CMakeLists.txt  svmpathplanning.cpp  svmpathplanning.h
NavEntorno/CUDALib/: CUDAlib.h  devices.cu  matchSURF.cu  sumaArrays.cu
NavEntorno/ComparaImagenes/: CRuta.cpp  CRuta.h  Hormigas.cpp  Hormigas.h  ReadMe.txt  aco.cpp  comparaImagenes.cpp  comparaImagenes.h  matchImagenes6.vcproj  matchImagenes8.cpp
NavEntorno/NavBasadaEntorno/: AffineAndEuclidean.cpp  CImageNavigation.cpp  CImageNavigation.h  CImageSearch.cpp  CImageSearch.h  CMRPT_Route.cpp  CMRPT_Route.h  CRuta.h  (+43 more)
config/: visualizeSVMPathPlanner.rviz
flota/: .classpath  .project  Conflicto.java  Distancias.java  InterfazFlota.java  VehiculoPintable.java  Visualizacion.java  classpath.bat  destino.clp  destino.owl  destino.pprj  distancias.clp  factsdistancias.clp  factsverdino.clp  owlfacts.txt  reglasarregladas.clp  reglasverdino.clp  reglasverdino2.clp  scriptsadicionales.clp  sqwrl.owl  swrla.owl.xml  verdino.owl  verdino.pprj
gazebo/: .cdtbuild  .project  position.cc
launch/: move_base_0.3_to_0.2.launch  statistics.launch  testSVMPathPlanner.launch
params/: costmap_common_params.yaml  multi_svm_global_planner.yaml  single_svm_global_planner.yaml  statistics.bak.yaml  statistics.yaml  svm_global_planner.yaml  voronoi_global_planner.yaml  voronoi_svm_global_planner.yaml
src/: svm_path_planner_ros.cpp  testInflation.cpp
src/SVMPathPlanner/: CMakeLists.txt  testSVMPathPlanning.cpp
src/SVMPathPlanner/GPULibSVM/: .svmpathplanningmiura.cpp (Copia en conflicto de Acerin 2013-05-13).kate-swp  CMakeLists.txt  kernel_matrix_calculation.c  testGPULibSVM.cpp
src/SVMPathPlanner/MSVMPP/: svmpathplanning.cpp  svmpathplanning.h  svmpathplanningsingle.cpp  svmpathplanningsingle.h  voronoipathplanning.cpp  voronoipathplanning.h  voronoisvmpathplanning.cpp  voronoisvmpathplanning.h
src/SVMPathPlanner/MSVMPP/cuda/: checkEdges.cu  predictSVM.cu
src/SVMPathPlanner/cuSVM/: cuSVMPredict.cpp  cuSVMUtil.cu  testCuSVM.cpp
src/SVMPathPlanner/gpudt/: gpudt.cpp  gpudt.h  predicates.cpp  readme.txt
src/SVMPathPlanner/gpudt/Cuda/: common.h  cudaBoundary.cu  cudaConstraint.cu  cudaMain.cu  cudaMissing.cu  cudaReconstruction.cu  cudaShifting.cu  pba2DHost.cu
src/SVMPathPlanner/libsvm/: testLibSVM.cpp
ultrasonidos/: OWL2Jessrevisada.xsl.xml  Prioridades.java  Tramo.java  ULtrasonidosLimpio.java  ULtrasonidosLimpioSegundoRebote.hex  ULtrasonidosLimpioSegundoRebote.txt  destino.clp  eliminarPosicionesAntiguas.clp  scriptsadicionales.clp  ultrasonidoslimpio.hex  verdino2.clp  verdino3.clp
(+839 files in other folders)
