<?xml version="1.0"?>
<package>
  <name>svm_path_planner</name>
  <version>0.0.1</version>
  <description>
      This planner gets a route between the current pose and a goal, using several based SVM techniques. 
      By default, this package uses the method described TODO..., but there are other methods, 
      implemented mainly for comparison purposes.    
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nestor@isaatc.ull.es">Néstor Morales Hernández</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache v2.0</license>
  
  
  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="repository">https://github.com/nestormh/polar_grid_tracking</url>
  <url type="website">http://nmorales.webs.ull.es</url>
  <url type="website">http://verdino.webs.ull.es</url>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>eigen3</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>eigen3</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lsvm_path_planner" cflags="-I${prefix}/include"/>
      <nav_core plugin="${prefix}/bgp_plugin.xml"/>
  </export>
</package>